Fix desktop nav links visibility

--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ footer {
   div.sidebar-overlay {
     position: inherit;
     display: inherit;
-    visibility: inherit;
+    visibility: visible;
     width: auto;
     height: auto;
     background-color: transparent;
